2024-11-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Use parameters as member variable, use events, deprecate hooks, resolves #17

2024-06-16 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Clean up code with Rector, drop compatibility with PHP 7.4 and 8.0, references #16

2024-05-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 13, resolves #16

2024-03-01 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add support for paginated results, resolves #10
    * Remove note about external_import and processArray hook, resolves #15
    * Release version 4.2.0

2024-02-28 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Drop warning about parameters deprecated a long time ago, resolves #13
    * Add "queryParameters" parameter, resolves #14

2023-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Improve check on result from JSON decoding, resolves #12
    * Release version 4.1.1

2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Verify compatibility with PHP 8.2
    * Release version 4.1.0

2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Update example code for service instanciation
    * Verify compatibility with TYPO3 12 LTS
    * Relase version 4.0.1

2022-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Relase version 4.0.0

2022-12-25 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 12, resolves #9
    * Ensure compatibility with PHP 8.1

2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Switch to new connector service registration API, resolves #11
    * Harden JSON decoding error handling, resolves #8

2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Relase version 3.0.0

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with PHP 8

2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>
