@@ -7,8 +7,3 @@ services:
 
   Cobweb\SvconnectorJson\:
     resource: '../Classes/*'
-
-  Cobweb\SvconnectorJson\Service\ConnectorJson:
-    public: true
-    arguments:
-      - !tagged_iterator connector.service
