@@ -1,6 +1,7 @@
 2024-11-10 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Use parameters as member variable, use events, deprecate hooks, resolves #17
+    * Use attribute for service registration
 
 2024-06-16 Francois Suter (Idéative)  <typo3@ideative.ch>
 
